# mutants-remote

./: Cargo.toml  DESIGN.md  Dockerfile  README.md  mutants-batch  mutants-batch.sh
example/: mutants-remote.toml
schema/: mutants-remote-config.schema.json
src/: cloud.rs  config.rs  error.rs  job.rs  log_tail.rs  main.rs  run.rs  shorttime.rs  tags.rs
src/cloud/: aws.rs  docker.rs  k8s.rs  mod.rs
src/cloud/aws/: log_tail.rs
terraform/aws/: README.md  main.tf  variables.tf
