[package]
name = "mutants-remote"
version = "0.1.0"
edition = "2024"
publish = false         # for now

[dependencies]
toml = { version = "0.9.5", features = [
    "parse",
    "std",
    "serde",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
aws-config = "1.8.3"
aws-sdk-batch = "1.90.0"
aws-sdk-cloudwatch = "1.84.0"
aws-sdk-cloudwatchlogs = "1.96.0"
aws-sdk-s3 = "1.100.0"
aws-sdk-sts = "1.80.0"
bytes = "1.10.1"
async-trait = "0.1"
thiserror = "1.0"
fastrand = "2.3.0"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
assert_matches = "1.5.0"
humantime = "2.2.0"

[dev-dependencies]
tempfile = "3.20.0"
